# firefox-ci-playground

./: .pre-commit-config.yaml  .taskcluster.yml  Pipfile  README.md  conftest.py  date_test.html  pyproject.toml  temp-aryx  tox.ini
docs/: conf.py  index.rst
taskcluster/: config.yml  requirements.txt
taskcluster/ci/: config.yml
taskcluster/ci/codecov/: kind.yml
taskcluster/ci/docker-image/: kind.yml
taskcluster/ci/hello/: kind.yml
taskcluster/docker/linux/: Dockerfile
taskcluster/firefox_ci_playground_taskgraph/transforms/: smoketest.py
taskcluster/kinds/codecov/: kind.yml
taskcluster/kinds/dagger/: kind.yml
taskcluster/kinds/docker-image/: kind.yml
taskcluster/kinds/hello/: kind.yml
taskcluster/kinds/run-smoke-tests/: kind.yml
taskcluster/scripts/: codecov-upload.py
test/: test_firefox_ci_playground.py  test_haiku_generator.py
tests/: test_bookmark.py
