[project]
name = "firefox-ci-playground"
version = "0.1.0"
description = ""
requires-python = ">=3.8"
authors = [
  { name = "Mozilla Release Engineering", email = "release@mozilla.com" }
]
classifiers = [
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]
readme = "README.md"

[tool.pytest.ini_options]
xfail_strict = true

[tool.coverage.run]
parallel = true
branch = true
source = ["src/firefox_ci_playground/"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E", "W",       # pycodestyle
    "F",            # pyflakes
    "I",            # isort
    "PLC", "PLE",   # pylint
    "UP",           # pyupgrade
    "TCH",          # flake8-type-checking
]
ignore = [
    "E501",  # let ruff-format handle line-length
]

[tool.ruff.isort]
known-first-party = ["firefox_ci_playground"]

[tool.pyright]
include = ["src/firefox_ci_playground"]
reportUnknownParameterType = "error"

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.1",
    "pyright>=1.1.379",
    "pytest>=8.3.2",
    "pytest-mock>=3.14.0",
    "responses>=0.25.3",
    "sphinx<7",
    "sphinx-autobuild<=2021.3.14",
    "sphinx-book-theme<=1.0.1",
    "tox>=4.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
